--- a/index.html
+++ b/index.html
@@ -54,9 +54,19 @@
             ]
             },
             {
-                title: "okx",
+            title: "跨链-2",
+            tags: [
+                { name: "layerswap", url: "https://layerswap.io/app" },
+                { name: "rhino", url: "https://app.rhino.fi/bridge?token=ETH&chainOut=ETHEREUM" },
+                { name: "memebridge", url: "https://www.memebridge.xyz/bridge?original=optimism&target=ethereum&symbol=eth" },
+                { name: "cometbridge", url: "https://cometbridge.app/?original=Arbitrum&target=Ethereum&symbol=ETH" },
+
+            ]
+            },
+            {
+                title: "b3",
                 tags: [
-                    { name: "okx-开启/关闭", url: "chrome://extensions/?id=mcohilncbfahbmgdjkbpemcciiolgcge" },
+                    { name: "解除质押", url: "https://stake.b3.fun/" },
                 ]
             }
         ];
