--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
             {
                 title: "espresso",
                 tags: [
-                    { name: "layer3", url: "https://app.layer3.xyz/campaigns/brewing-the-future" },
+                    { name: "layer3-week-1", url: "https://app.layer3.xyz/campaigns/brewing-the-future" },
+                    { name: "layer3-2 week（RARI）", url: "https://app.layer3.xyz/activations/brewing-the-future-rari" },
+                    { name: "layer3-2 week（MGX）", url: "https://app.layer3.xyz/activations/brewing-the-future-arbitrum" },
                     { name: "OKX钱包主页", url: "chrome-extension://mcohilncbfahbmgdjkbpemcciiolgcge/home.html" },
-                    { name: "D B C D", url: "" },
+                    // { name: "D B C D", url: "" },
                     { name: "邮箱注册", url: "https://mail.163.com/register/index.htm?from=163mail&utm_source=163mail#/normal" },
                     { name: "存款-eth.cash", url: "https://app.eth.cash/" }
                 ]
             },
-            {
-                title: "b3",
-                tags: [
-                    { name: "解除质押", url: "https://stake.b3.fun/" },
-                ]
-            },
+            // {
+            //     title: "b3",
+            //     tags: [
+            //         { name: "解除质押", url: "https://stake.b3.fun/" },
+            //     ]
+            // },
             {
                 title: "opensea",
                 tags: [
@@ -54,9 +56,19 @@
                 { name: "rotue", url: "https://app.routernitro.com/swap" },
                 { name: "bungee", url: "https://www.bungee.exchange/" },
                 { name: "jumper", url: "https://jumper.exchange/zh" },
-                { name: "pancakeswap", url: "https://pancakeswap.finance/swap" },
-                { name: "izumi", url: "https://izumi.finance/trade/swap" },
-                { name: "uniswap", url: "https://app.uniswap.org/swap" },
+                { name: "stargate", url: "https://stargate.finance/bridge" },
+                { name: "across", url: "https://app.across.to/bridge" },
+                { name: "gas", url: "https://www.gas.zip/" },
+                { name: "minibridge", url: "https://minibridge.chaineye.tools/?src=arbitrum&dst=base&mode=transfer" },
+                
+                // { name: "    ", url: "    " },
+                // { name: "    ", url: "    " },
+                // { name: "    ", url: "    " },
+
+
+                // { name: "pancakeswap", url: "https://pancakeswap.finance/swap" },
+                // { name: "izumi", url: "https://izumi.finance/trade/swap" },
+                // { name: "uniswap", url: "https://app.uniswap.org/swap" },
             ]
             },
             {
