--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             ]
             },
             {
-            title: "跨链-RARI专用",
+            title: "跨链-RARI专用-1",
             tags: [
                 { name: "relay-arb", url: "https://relay.link/bridge/arbitrum?fromChainId=1380012617&fromCurrency=0x0000000000000000000000000000000000000000&toCurrency=0x0000000000000000000000000000000000000000" },
                 { name: "relay-base", url: "https://relay.link/bridge/base?fromChainId=1380012617&toCurrency=0x0000000000000000000000000000000000000000" },
@@ -103,7 +103,12 @@
                 { name: "memeBridge-BASE", url: "https://www.memebridge.xyz/bridge?original=rari&target=base&symbol=eth" },
                 { name: "memeBridge-OP", url: "https://www.memebridge.xyz/bridge?original=rari&target=optimism&symbol=eth" },
                 
-                
+
+            ]
+            },
+            {
+            title: "跨链-RARI专用-2",
+            tags: [
                 { name: "decent", url: "https://app.decent.xyz/decent" },
                 { name: "Layerswap", url: "https://layerswap.io/app" },
                 { name: "ARB-官方", url: "https://bridge.arbitrum.io/?destinationChain=arbitrum-one&sourceChain=rari-mainnet&tab=bridge" },
