--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
                 { name: "relay-base", url: "https://relay.link/bridge/base?fromChainId=1380012617&toCurrency=0x0000000000000000000000000000000000000000" },
                 { name: "relay-op", url: "https://relay.link/bridge/optimism?fromChainId=1380012617&toCurrency=0x0000000000000000000000000000000000000000" },
 
-                { name: "retro-Bridge-ARB", url: "https://app.retrobridge.io/?destination=Arbitrum+One&tokenFrom=ETH&source=Rari+Chain&tokenTo=ETH" },
-                { name: "retro-Bridge-BASE", url: "https://app.retrobridge.io/?destination=Base&tokenFrom=ETH&source=Rari+Chain&tokenTo=ETH" },
-                { name: "retro-Bridge-OP", url: "https://app.retrobridge.io/?destination=Optimism&tokenFrom=ETH&source=Rari+Chain&tokenTo=ETH" },
+                // { name: "retro-Bridge-ARB", url: "https://app.retrobridge.io/?destination=Arbitrum+One&tokenFrom=ETH&source=Rari+Chain&tokenTo=ETH" },
+                // { name: "retro-Bridge-BASE", url: "https://app.retrobridge.io/?destination=Base&tokenFrom=ETH&source=Rari+Chain&tokenTo=ETH" },
+                // { name: "retro-Bridge-OP", url: "https://app.retrobridge.io/?destination=Optimism&tokenFrom=ETH&source=Rari+Chain&tokenTo=ETH" },
 
 
-                { name: "Owlto_to_arb", url: "https://owlto.finance/?from=RARI&to=ARBitrum" },
-                { name: "Owlto_to_base", url: "https://owlto.finance/?from=RARI&to=Base" },
-                { name: "Owlto_to_op", url: "https://owlto.finance/?from=RARI&to=Optimism" },
+                // { name: "Owlto_to_arb", url: "https://owlto.finance/?from=RARI&to=ARBitrum" },
+                // { name: "Owlto_to_base", url: "https://owlto.finance/?from=RARI&to=Base" },
+                // { name: "Owlto_to_op", url: "https://owlto.finance/?from=RARI&to=Optimism" },
 
 
                 
@@ -111,7 +111,7 @@
             tags: [
                 { name: "decent", url: "https://app.decent.xyz/decent" },
                 { name: "Layerswap", url: "https://layerswap.io/app" },
-                { name: "ARB-官方", url: "https://bridge.arbitrum.io/?destinationChain=arbitrum-one&sourceChain=rari-mainnet&tab=bridge" },
+                // { name: "ARB-官方", url: "https://bridge.arbitrum.io/?destinationChain=arbitrum-one&sourceChain=rari-mainnet&tab=bridge" },
 
                 // { name: "    ", url: "    " },
                 // { name: "    ", url: "    " },
