--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- 顶部 big tag -->
     <div id="top-tags" class="container">
         <div class="big-tag" data-url="chrome-extension://mcohilncbfahbmgdjkbpemcciiolgcge/home.html">OKX钱包</div>
-        
+
          <div class="big-tag" id="insert-button-rari">添加RARI链</div>
 
         <div class="big-tag" id="switch-button-buy">跨链购买切换</div>
@@ -39,7 +39,7 @@
             {
                 title: "相关操作",
                 tags: [
-                    { name: "添加RARI链", url: "https://taochen991228.github.io/opensea/" },
+                    // { name: "添加RARI链", url: "https://taochen991228.github.io/opensea/" },
                     { name: "ARB to RARI", url: `https://bridge.arbitrum.io/?amount=${getRandomAmount()}&destinationChain=rari-mainnet&sourceChain=arbitrum-one&tab=bridge` },
 
                 ]
