--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     { name: "总体-L3", url: "https://app.layer3.xyz/campaigns/brewing-the-future" },
                     { name: "Caldera", url: "https://app.layer3.xyz/activations/brewing-the-future-caldera" },
                     { name: "Logx", url: "https://app.layer3.xyz/activations/brewing-the-future-logx" },
+                    { name: "Logx---DC", url: "https://discord.com/invite/logx" },
                     // { name: "layer3-2 week（RARI）", url: "https://app.layer3.xyz/activations/brewing-the-future-rari" },
                     // { name: "layer3-2 week（MGX）", url: "https://app.layer3.xyz/activations/brewing-the-future-arbitrum" },
-                    { name: "OKX钱包主页", url: "chrome-extension://mcohilncbfahbmgdjkbpemcciiolgcge/home.html" },
                     // { name: "邮箱注册", url: "https://mail.163.com/register/index.htm?from=163mail&utm_source=163mail#/normal" },
                     // { name: "存款-eth.cash", url: "https://app.eth.cash/" }
                 ]
@@ -50,9 +50,22 @@
                 title: "相关操作",
                 tags: [          
                     {
-                    name: "Logx 随机",
+                    name: "Logx 随机-1",
                     url: `https://app.logx.network/trade/${getRandomCoin()}`
                     },
+                    {
+                    name: "Logx 随机-2",
+                    url: `https://app.logx.network/trade/${getRandomCoin()}`
+                    },
+                    {
+                    name: "Logx 随机-3",
+                    url: `https://app.logx.network/trade/${getRandomCoin()}`
+                    },
+                    {
+                    name: "Logx 随机-4",
+                    url: `https://app.logx.network/trade/${getRandomCoin()}`
+                    },
+                    
 
 
 
@@ -63,6 +76,10 @@
                 tags: [
                     {
                     name: "Logx 随机-备份",
+                    url: `https://app.logx.network/trade/${getRandomCoin()}`
+                    },
+                    {
+                    name: "Logx 随机-备份-2",
                     url: `https://app.logx.network/trade/${getRandomCoin()}`
                     },
 
