--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
     (() => {
 
         const coins = [
-        "BTC", "ETH", "TRUMP", "SOL", "DOGE", "ARB",
-        "XRP", "TON", "FARTCOIN", "GRASS", "SUI", "WAL",
-        "EIGEN", "LINK","NEAR","WIF","POPCAT","TIA","SEI",
-        "TAIKO","VIRTUAL","APE","ALGO","MOVE","PROMPT","NXPC","ZRO"
+        "BTC", "ETH", "SOL", "LINK"
         ];
 
         const tagGroups = [
