--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     (() => {
 
         const coins = [
-        "BTC", "ETH", "SOL", "LINK"
+        "BTC", "ETH", "SOL"
         ];
 
         const tagGroups = [
@@ -36,6 +36,9 @@
                     { name: "总体-L3", url: "https://app.layer3.xyz/campaigns/brewing-the-future" },
                     { name: "Caldera", url: "https://app.layer3.xyz/activations/brewing-the-future-caldera" },
                     { name: "Logx", url: "https://app.layer3.xyz/activations/brewing-the-future-logx" },
+                    { name: "APE", url: "https://app.layer3.xyz/activations/brewing-the-future-apechain" },
+                    { name: "Molten", url: "https://app.layer3.xyz/activations/brewing-the-future-molten-network" },
+
                     { name: "Logx---DC", url: "https://discord.com/invite/logx" },
                     // { name: "layer3-2 week（RARI）", url: "https://app.layer3.xyz/activations/brewing-the-future-rari" },
                     // { name: "layer3-2 week（MGX）", url: "https://app.layer3.xyz/activations/brewing-the-future-arbitrum" },
